Complete animated welcome chrome parity